# deli

./: Anchor.toml  package-lock.json  package.json
programs/deli/: Cargo.toml
programs/deli/src/: errors.rs  lib.rs
programs/deli/src/contexts/: add_name.rs  collect.rs  create.rs  create_interval.rs  delegate.rs  mod.rs  subscribe.rs  unsubscribe.rs
programs/deli/src/state/: mod.rs
programs/payments/: Cargo.toml
programs/payments/src/: errors.rs  lib.rs
programs/payments/src/contexts/: add_child_product.rs  add_product.rs  add_tier.rs  collect.rs  delegate.rs  mod.rs  subscribe.rs  unsubscribe.rs
programs/payments/src/state/: mod.rs
tests/: deli.ts  subscription.ts
