[package]
name = "subscription"
version = "0.1.0"
description = "Subscription and Affiliate program for Dittobot"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "subscription"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.28.0", features = ["init-if-needed"]}
anchor-spl = "0.28.0"
